ci: use consistent permissions in workflows (#2)

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,16 +24,15 @@ permissions: read-all
 jobs:
   lint:
     if: "${{ github.event.action != 'labeled' || github.event.label.name == 'tests: run' }}"
-    name: run lint
+    name: lint
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
     permissions:
       contents: 'read'
-      id-token: 'write'
-      issues: write
-      pull-requests: write
+      issues: 'write'
+      pull-requests: 'write'
     steps:
       - name: Remove PR Label
         if: "${{ github.event.action == 'labeled' && github.event.label.name == 'tests: run' }}"
