--- a/.ci/integration.cloudbuild.yaml
+++ b/.ci/integration.cloudbuild.yaml
@@ -101,6 +101,23 @@ steps:
       - |
         go test -race -v -tags=integration,spanner ./tests
 
+  - id: "neo4j"
+    name: golang:1
+    waitFor: ["install-dependencies"]
+    entrypoint: /bin/bash
+    env:
+      - "GOPATH=/gopath"
+      - "NEO4J_DATABASE=$_NEO4J_DATABASE"
+      - "NEO4J_URI=$_NEO4J_URI"
+    secretEnv: ["NEO4J_USER", "NEO4J_PASS"]
+    volumes:
+      - name: "go"
+        path: "/gopath"
+    args:
+      - -c
+      - |
+        go test -race -v -tags=integration,neo4j ./tests
+
 availableSecrets:
   secretManager:
     - versionName: projects/$PROJECT_ID/secrets/cloud_sql_pg_user/versions/latest
@@ -117,6 +134,10 @@ availableSecrets:
       env: POSTGRES_PASS
     - versionName: projects/$PROJECT_ID/secrets/client_id/versions/latest
       env: CLIENT_ID
+    - versionName: projects/$PROJECT_ID/secrets/neo4j_user/versions/latest
+      env: NEO4J_USER
+    - versionName: projects/$PROJECT_ID/secrets/neo4j_pass/versions/latest
+      env: NEO4J_PASS
 
 options:
   logging: CLOUD_LOGGING_ONLY
@@ -135,3 +156,4 @@ substitutions:
   _POSTGRES_HOST: 127.0.0.1
   _POSTGRES_PORT: "5432"
   _SPANNER_INSTANCE: "spanner-testing"
+  _NEO4J_DATABASE: "neo4j"
