chore: add new repo labels (#491)

--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -68,3 +68,15 @@
 - name: 'tests: run'
   color: 3DED97
   description: Label to trigger Github Action tests.
+
+- name: 'status: contribution welcome'
+  color: 8befd7
+  description: Status - Contributions welcome.
+
+- name: 'status: awaiting response'
+  color: 8befd7
+  description: Status - Awaiting response from author.
+
+- name: 'status: awaiting codeowners'
+  color: 8befd7
+  description: Status - Awaiting response from code owners.
