--- a/.ci/integration.cloudbuild.yaml
+++ b/.ci/integration.cloudbuild.yaml
@@ -332,7 +332,22 @@ steps:
       - -c
       - |
         ./couchbase.test -test.v
-    
+
+  - id: "redis"
+    name : golang:1
+    waitFor: ["compile-test-binary"]
+    entrypoint: /bin/bash
+    env:
+      - "GOPATH=/gopath"
+      - "SERVICE_ACCOUNT_EMAIL=$SERVICE_ACCOUNT_EMAIL"
+    secretEnv: ["REDIS_ADDRESS", "REDIS_PASS", "CLIENT_ID"]
+    volumes:
+      - name: "go"
+        path: "/gopath"
+    args:
+      - -c
+      - |
+        ./redis.test -test.v
 
 availableSecrets:
   secretManager:
@@ -380,6 +395,10 @@ availableSecrets:
       env: COUCHBASE_USER
     - versionName: projects/$PROJECT_ID/secrets/couchbase_pass/versions/latest
       env: COUCHBASE_PASS
+    - versionName: projects/$PROJECT_ID/secrets/memorystore_redis_address/versions/latest
+      env: REDIS_ADDRESS
+    - versionName: projects/$PROJECT_ID/secrets/memorystore_redis_pass/versions/latest
+      env: REDIS_PASS
 
 
 options:
