--- a/.ci/versioned.release.cloudbuild.yaml
+++ b/.ci/versioned.release.cloudbuild.yaml
@@ -137,6 +137,7 @@ options:
   automapSubstitutions: true
   dynamicSubstitutions: true
   logging: CLOUD_LOGGING_ONLY # Necessary for custom service account
+  machineType: 'E2_HIGHCPU_32'
 
 substitutions:
   _REGION: us-central1
