--- a/.ci/integration.cloudbuild.yaml
+++ b/.ci/integration.cloudbuild.yaml
@@ -452,6 +452,7 @@ steps:
       - "GOPATH=/gopath"
       - "OCEANBASE_PORT=$_OCEANBASE_PORT"
       - "OCEANBASE_DATABASE=$_OCEANBASE_DATABASE"
+      - "SERVICE_ACCOUNT_EMAIL=$SERVICE_ACCOUNT_EMAIL"
     secretEnv: ["CLIENT_ID", "OCEANBASE_HOST", "OCEANBASE_USER", "OCEANBASE_PASSWORD"]
     volumes:
       - name: "go"
